Audio implementation refactoring